# noths-pipeline

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  Dockerfile  Makefile  README.md  pyproject.toml
dbt/: .user.yml  dbt_project.yml  profiles.yml
dbt/models/gold/: product_ratings_summary.sql  product_summary.sql  schema.yml  top_products_by_reviews.sql
dbt/models/silver/: schema.yml  stg_feefo_product_ratings.sql  stg_feefo_reviews.sql
dbt/tests/: no_future_updated_dates.sql  no_nulls_in_critical_fields.sql  product_rating_in_valid_range.sql
pipeline/: cli.py  extract.py  feefo_pipeline.py  settings.py
scripts/: run_pipeline.sh
tests/: conftest.py  test_cli_flags_propagate.py  test_extract_merge_vs_replace.py  test_max_pages_limits_calls.py  test_transformation_logic.py
